--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/Black"
         android:textSize="20dp"
-        android:text="Email: bedosoprt6@gmail.com"
+        android:text="Email: bedosport6@gmail.com"
         android:gravity="center"
         android:textStyle="bold"
         android:layout_marginTop="60dp"
